Started working on Transaction.create form, web route, api route and tests for both
